--- a/src.ipynb
+++ b/src.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "ae24029d",
    "metadata": {},
    "outputs": [
@@ -360,27 +360,18 @@
      "output_type": "stream",
      "text": [
       "=== Task 1: Controlled-Y Optimization ===\n",
-      "T-count: 2\n",
+      "T-count: 0\n",
       "CNOT count: 2\n",
       "Fidelity (ignoring global phase): 1.000000\n",
       "\n",
       "Optimized Circuit Diagram:\n",
-      "                    ┌─────┐┌─────┐\n",
-      "q_0: ──■─────────■──┤ Tdg ├┤ Tdg ├\n",
-      "     ┌─┴─┐┌───┐┌─┴─┐└┬───┬┘└─────┘\n",
-      "q_1: ┤ X ├┤ H ├┤ X ├─┤ H ├────────\n",
-      "     └───┘└───┘└───┘ └───┘        \n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'QuantumCircuit' object has no attribute 'qasm'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 57\u001b[39m\n\u001b[32m     55\u001b[39m qasm_path = \u001b[33m'\u001b[39m\u001b[33mqasm_results/task1_cy.qasm\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m     56\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(qasm_path, \u001b[33m'\u001b[39m\u001b[33mw\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m---> \u001b[39m\u001b[32m57\u001b[39m     f.write(\u001b[43mqc_opt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mqasm\u001b[49m())\n\u001b[32m     58\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mSuccessfully saved QASM to: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mqasm_path\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[31mAttributeError\u001b[39m: 'QuantumCircuit' object has no attribute 'qasm'"
+      "                    ┌─────┐\n",
+      "q_0: ──■─────────■──┤ Sdg ├\n",
+      "     ┌─┴─┐┌───┐┌─┴─┐└┬───┬┘\n",
+      "q_1: ┤ X ├┤ H ├┤ X ├─┤ H ├─\n",
+      "     └───┘└───┘└───┘ └───┘ \n",
+      "\n",
+      "Successfully saved QASM to: qasm_results/task1_cy.qasm\n"
      ]
     }
    ],
@@ -411,8 +402,9 @@
     "    \n",
     "    # 3. S-dagger on control to correct phase (T-count: 2)\n",
     "    # Using T-dagger twice to form S-dagger\n",
-    "    qc.tdg(0)\n",
-    "    qc.tdg(0)\n",
+    "    # qc.tdg(0)\n",
+    "    # qc.tdg(0)\n",
+    "    qc.sdg(0)\n",
     "    \n",
     "    return qc\n",
     "\n",
@@ -447,9 +439,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "88665227",
+   "metadata": {},
+   "source": [
+    "# Task 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e1280b36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operator Norm Distance: 0.22392895220661566\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "from scipy.linalg import expm\n",
+    "from qiskit import QuantumCircuit, transpile\n",
+    "from qiskit.quantum_info import Operator\n",
+    "\n",
+    "# Results directory [cite: 75]\n",
+    "os.makedirs('qasm_results', exist_ok=True)\n",
+    "\n",
+    "def get_target_cry_pi7():\n",
+    "    \"\"\"Exact unitary for Task 2[cite: 33, 36, 37].\"\"\"\n",
+    "    I = np.eye(2)\n",
+    "    Y = np.array([[0, -1j], [1j, 0]])\n",
+    "    theta = np.pi / 7\n",
+    "    # Ry(theta) = exp(-i * theta/2 * Y) [cite: 103]\n",
+    "    ry = expm(-1j * (theta/2) * Y)\n",
+    "    # Control is q0, Target is q1 [cite: 17]\n",
+    "    target = np.block([\n",
+    "        [I, np.zeros((2,2))],\n",
+    "        [np.zeros((2,2)), ry]\n",
+    "    ])\n",
+    "    return target\n",
+    "\n",
+    "def create_task2_circuit():\n",
+    "    qc = QuantumCircuit(2)\n",
+    "    \n",
+    "    # Rotation 1: Ry(pi/14) = H * Rz(pi/14) * H\n",
+    "    qc.h(1)\n",
+    "    # --- INSERT OPTIMIZED T-SEQUENCE FOR Rz(pi/14) HERE ---\n",
+    "    # Example: qc.t(1); qc.h(1); ... (from gridsynth) [cite: 111]\n",
+    "    qc.h(1)\n",
+    "    \n",
+    "    qc.cx(0, 1)\n",
+    "    \n",
+    "    # Rotation 2: Ry(-pi/14) = H * Rz(-pi/14) * H\n",
+    "    qc.h(1)\n",
+    "    # --- INSERT OPTIMIZED T-SEQUENCE FOR Rz(-pi/14) HERE ---\n",
+    "    qc.h(1)\n",
+    "    \n",
+    "    qc.cx(0, 1)\n",
+    "    return qc\n",
+    "\n",
+    "# --- Verification ---\n",
+    "# Generate the exact matrix to compare against \n",
+    "U_target = get_target_cry_pi7()\n",
+    "\n",
+    "# After you insert your sequence, run this to check distance [cite: 88, 89]\n",
+    "U_approx = Operator(create_task2_circuit()).data\n",
+    "dist = np.linalg.norm(U_target - U_approx, ord=2) \n",
+    "print(f\"Operator Norm Distance: {dist}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46a45368",
+   "metadata": {},
+   "source": [
+    "# Task 11"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1280b36",
+   "id": "9330ffa9",
    "metadata": {},
    "outputs": [],
    "source": []
